fix spacings on services pages

--- a/_sass/new-styles/modules/home/_newsletter.scss
+++ b/_sass/new-styles/modules/home/_newsletter.scss
@@ -200,6 +200,7 @@
     display: flex;
     justify-content: space-between;
     padding-top: 170px;
+    padding-bottom: 90px;
 
     &__content {
       flex-grow: 1;
